BUILD CHANGES TO COMPILE ON JDK9 USING SBT 1.0, DO NOT MERGE